src/test/resources/semantic/reject/arrayAssignmentNonIntIndex.ul
void main() {
}

void foo() {
    int[10] foo;
    foo[5.0] = 50;
}
